# POCOTutorial

./: CMakeLists.txt  POCO.props  POCO.txt  POCOTutorial.sln  README.md
VCM2/: CMakeLists.txt  DEBUG.txt  README.txt  main.cpp
VCM2/ssl/: any.key
poco_01/: CMakeLists.txt  poco_01.cpp  poco_01.vcxproj  poco_01.vcxproj.filters
poco_02/: CMakeLists.txt  poco_02.cpp
